[package]
name = "myboard"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version="0.4.0", features=["rt"] }
rp-pico = "0.2.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
cortex-m-rt = { version = "0.7", optional = true }
pio-proc = "0.1"
pio = "0.1"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]

# needed for missing eh_personality
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

